--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="first-sec">
         <h1>Let’s Help Those Who Are 
             More In Need</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem veritatis earum quae error, officia cum quo distinctio eos repellat facere saepe ipsum consectetur incidunt nostrum. </p>
+        <p> With the help of your donation, we helped more than 2 lacs, families, across the country. Moreover, We will continue to do so in order to build a country where everyone will get basic necessities.  </p>
         <a href="#">Donate Now</a>
     </section>
 
@@ -26,7 +26,7 @@
         <h1>
             Donate Today
         </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, facilis maxime accusamus nemo deserunt illo sed hic velit repellendus quaerat distinctio.</p>
+        <p> your donation is important to many underprivileged families and also to people who are suffering from many natural calamities. Hence, we need your support so that we can help them.</p>
         <div class="flex-cont">
             <div >
                 <h1>100tk</h1>
@@ -54,26 +54,26 @@
         <h1>
             Our Donate Plan
         </h1>
-        <p id="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora dignissimos ex quibusdam ratione exercitationem modi corporis aspernatur recusandae quisquam veritatis.</p>
+        <p id="para">we are helping people in several aspects such as giving food to needy people, managing shelter who doesn't have it, and education for children who don't have the chance to have it.</p>
 
         <div class="flex-cont2">
             <div id="div1">
                 <img src="images/food.png" alt="">
                 <h2>Food for a family
                 </h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, voluptate?</p>
+                <p>we are working on giving food to needy people.</p>
             </div>
             <div id="div2">
                 <img src="images/shelter.png" alt="">
-                <h2>Food for a family
+                <h2>Shelter for a family
                 </h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, voluptate?</p>
+                <p>we manage a shelter for those who have lost it or do not have it</p>
             </div>
             <div id="div3">
                 <img src="images/Frame-1.png" alt="">
-                <h2>Food for a family
+                <h2>Education for a child
                 </h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque, voluptate?</p>
+                <p>We also help underprivileged children so that they can get an education.</p>
             </div>
         </div>
     </section>
@@ -83,7 +83,7 @@
         
         <div class="fourth-sec">
             <div class="half-width" >
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et doloremque laudantium aperiam pariatur a voluptatem sit, labore nulla praesentium, explicabo quam alias similique, eaque perferendis totam quaerat? Odio sint officiis cum quibusdam quam error, quae voluptates cupiditate atque tenetur nulla! Nulla dicta, voluptatem at sequi accusantium quibusdam..... <br><br><br>
+                <p>Our organization is relatively new, however, we are continuously working hard so that we can expand it and could help as many underprivileged people as we could. Our organization is totally non-profit organization and most of the workers here are working voluntarily.Hence, we need your support, without it, our organization could not able to survive...<br><br><br>
                     <a href="#" >Continue Reading</a>
                 </p>
             </div>
@@ -99,7 +99,7 @@
             Get My Updates
         </h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam voluptatem eaque qui laborum, necessitatibus impedit quas vero non. Laborum, quaerat.
+            You can stay updated with our recent activity and seminar upon subscribing to us. Moreover, you can also get an update if we need any volunteers in our team in order to help others.
         </p>
         <div class="sub">
             <div >
